# Vessel

./: LICENSE  README.md  meson.build  vessel.doap
data/: meson.build  vessel.gresource.xml
data/shaders/: fragment.glsl  old-fragment.glsl  vertex.glsl
example/: app.vala  meson.build
example/data/: example.gresource.xml  meson.build  wave-vertex.glsl  window.blp
example/data/models/: ChessBoard.mtl  ChessPiece.mtl
example/rubik/: animation-queue.vala  colored-cube.vala  rubik-cube.vala
example/ui/: main-window.vala
src/: buffer-info.vala  geometry-3d.vala  meson.build  object-3d.vala  transformable-3d.vala
src/cameras/: arcball-camera.vala  camera.vala  meson.build
src/lights/: light.vala  meson.build
src/materials/: material.vala  meson.build  shader-material.vala  standart-material.vala
src/materials/shaders/: fragment-shader.vala  shader-base.vala  shader.vala  vertex-shader.vala
src/math/: euler-order.vala  geometry-util.vala  mat3.vala  mat4.vala  matrix-util.vala  meson.build  quaternion.vala  vec2.vala  vec3.vala  vec4.vala
src/primitives/: cube.vala  meson.build  sphere.vala
src/renderer/: meson.build  renderer.vala
src/resources/: meson.build  texture2d.vala
src/resources/loaders/: meson.build  wavefront-loader.vala
src/resources/mesh/: mesh.vala  meson.build  primitive-mesh.vala  surface.vala
src/resources/mesh/primitives/: box-mesh.vala  meson.build  sphere-mesh.vala
src/scene/: meson.build  node.vala  scene.vala  viewport.vala
src/scene/3d/: line3d.vala  mesh3d.vala  meson.build  node3d.vala
src/scene/3d/debug/: grid-floor.vala  meson.build
src/utils/: array-buffer.vala  color.vala  meson.build  utf8-input-stream.vala
vapi/: gl.vapi
